feature: 完成 batchActivity UI

--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/shoulder/pages/activityPage.html.config
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/shoulder/pages/activityPage.html.config
@@ -11,13 +11,56 @@
             --primary-color: #4a90e2;
             --running-gradient: linear-gradient(135deg, #ff6b6b 0%, #ff9f43 100%);
             --progress-gradient: linear-gradient(45deg, #4a90e2 25%, #6c5ce7 100%);
+            --container-width: 1320px;
+            --gap-base: 1rem;
         }
 
         body {
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             min-height: 100vh;
-            padding: 40px 20px;
+            padding: 2rem 1rem;
+            margin: 0;
+        }
+
+        /* 容器系统 */
+        .container {
+            width: 100%;
+            max-width: var(--container-width);
+            margin: 0 auto;
+            padding: 0 1rem;
+        }
+
+        /* 标题系统 */
+        .title {
+            text-align: center;
+            margin: 0 0 3rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            line-height: 1.2;
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            background-image: linear-gradient(135deg, #4a90e2, #6c5ce7);
+        }
+
+        /* 布局系统 */
+        .flex-column {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .flex-row {
+            display: flex;
+            gap: var(--gap-base);
+            justify-content: center;
+        }
+
+        .grid-responsive {
+            display: grid;
+            gap: var(--gap-base);
+            grid-template-columns: repeat(auto-fit, minmax(var(--node-width), 1fr));
         }
 
         /* 主流程容器 */
@@ -27,6 +70,7 @@
             align-items: center;
             position: relative;
             padding: 0 20px;
+            isolation: isolate;
         }
 
         /* 并行分支容器 */
@@ -38,34 +82,30 @@
             position: relative;
         }
 
-        /* 并行分支列 */
+        /* 流程元素 */
         .parallel-column {
             background: rgba(255, 255, 255, 0.9);
-            border-radius: 16px;
-            padding: 25px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            border-radius: 1rem;
+            padding: 1.5rem;
+            box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.3);
             min-width: var(--node-width);
             backdrop-filter: blur(10px);
-            position: relative;
         }
 
-        /* 任务节点 */
+        /* 任务节点（保留原有动效） */
         .node {
             width: var(--node-width);
-            min-height: 90px;
+            min-height: 5.625rem;
             background: rgba(255, 255, 255, 0.95);
-            border-radius: 12px;
-            padding: 18px;
-            margin: 18px 0;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-            /*transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);*/
+            border-radius: 0.75rem;
+            padding: 1.125rem;
+            margin: 1.125rem 0;
+            box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.08);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             overflow: hidden;
             border: 1px solid rgba(0, 0, 0, 0.05);
-
-            /* 新增悬浮光效 */
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .node::before {
@@ -133,20 +173,6 @@
             rgba(255, 255, 255, 0.3) 50%,
             transparent 75%);
             animation: progressShine 1.5s infinite;
-        }
-
-        /* 连接线样式 */
-        .flow-line {
-            position: absolute;
-            background: var(--primary-color);
-            opacity: 0.3;
-            z-index: -1;
-        }
-
-        .vertical-line {
-            width: 2px;
-            height: 40px;
-            left: 50%;
         }
 
         .branch-connector {
@@ -300,6 +326,11 @@
         @media (max-width: 768px) {
             :root {
                 --node-width: 90%;
+                --container-width: 100%;
+            }
+
+            .flex-row {
+                flex-wrap: wrap;
             }
 
             .parallel-section {
@@ -315,12 +346,11 @@
 
 <body>
 <div class="container">
-    <h1 class="text-center mb-5 display-5 fw-bold" style="color: #2c3e50;">
-        <span id="headerTitle"
-              style="background: linear-gradient(135deg, #4a90e2, #6c5ce7); -webkit-background-clip: text; color: transparent;"></span>
+    <h1 class="title">
+        <span id="headerTitle"></span>
     </h1>
 
-    <div id="progress-container"></div>
+    <div id="progress-container" class="flex-column"></div>
 </div>
 
 <script>
@@ -331,6 +361,21 @@
 
     // 启动初始化
     init();
+
+    // 触发mock
+    async function mockProgress() {
+        try {
+            const response = await fetch(`SHOULDER_PAGE_HOST##BATCH_ACTIVITY_API_PATH##/testProgress?progressId=_shoulderMockAndTest&activityId=MyTaskEnum`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            });
+            console.log("特殊的 progressId=_shoulderMockAndTest, 进入演示模式，自动创建流程并执行！");
+        } catch (error) {
+            console.error('进入演示模式失败:', error, response);
+        }
+    }
 
     // 获取活动结构
     async function fetchActivityStruct() {
@@ -361,9 +406,14 @@
         wrapper.className = block.type === 'SERIAL' ? 'main-flow' : 'parallel-section';
 
         if (block.type === 'PARALLEL') {
+            if (!Array.isArray(block.list[0][0])) {
+                console.error('PARALLEL 结构异常:', block);
+                return wrapper;
+            }
+            wrapper.className = 'flex-row grid-responsive';
             block.list.forEach(parallelList => {
                 const column = document.createElement('div');
-                column.className = 'parallel-column';
+                column.className = 'parallel-column flex-column';
 
                 parallelList.forEach(columnList => {
                     columnList.forEach(activity => {
@@ -374,6 +424,7 @@
                 wrapper.appendChild(column);
             });
         } else {
+            wrapper.className = 'flex-column';
             block.list.forEach(activity => {
                 wrapper.appendChild(createNodeElement(activity));
             });
@@ -386,20 +437,26 @@
     function createNodeElement(activity) {
         const node = document.createElement('div');
         node.className = 'node status-waiting';
-        node.id = activity.id;
-
         node.innerHTML = `
-        <div class="node-header">
-            <span class="node-icon">${activity.icon}</span>
-            <span>${activity.title}</span>
-        </div>
-        <span class="status-badge">等待开始</span>
-        <div class="progress-container" style="display:none">
-            <div class="progress-bar" style="width: 1%"></div>
-        </div>
-    `;
-
+                <div style="display: flex; align-items: center; margin-bottom: 0.5rem;">
+                    <span class="node-icon">${activity.icon}</span>
+                    <span style="margin-left: 0.5rem; font-weight: 500;">${activity.title}</span>
+                </div>
+                <span class="status-badge">等待开始</span>
+                <div class="progress-container" style="display:none">
+                    <div class="progress-bar" style="width: 1%"></div>
+                </div>
+            `;
+        node.id = activity.id;
         return node;
+    }
+
+    function validateResponse(resp) {
+        if (resp.code !=='0') {
+            console.error('无效的 API 响应结构:', resp);
+            throw new Error('无效的 API 响应结构');
+        }
+        return resp.data;
     }
 
     // 初始化流程
@@ -408,8 +465,12 @@
             alert('未指定 activityId');
             return;
         }
+        if(progressId === '_shoulderMockAndTest') {
+            // 演示模式：执行mock
+            mockProgress();
+        }
         try {
-            const activityStruct = await fetchActivityStruct();
+            const activityStruct = validateResponse(await fetchActivityStruct());
             renderActivityStructure(activityStruct);
 
             if (!progressId) {
@@ -427,22 +488,22 @@
     function startProgressPolling(endStepId) {
         const intervalId = setInterval(async () => {
             try {
-                const response = await fetch(
+                const resp = await fetch(
                     `SHOULDER_PAGE_HOST##BATCH_ACTIVITY_API_PATH##/progress?progressId=${progressId}&activityId=${activityId}`
                 );
-                const data = await response.json();
+                const data = validateResponse(await resp.json());
 
-                if (this.updateProgress(data, endStepId)) {
+                if (updateProgress(data, endStepId, intervalId)) {
                     clearInterval(intervalId);
                 }
             } catch (error) {
-                console.error('进度更新失败:', error);
+                clearInterval(intervalId);
             }
         }, 500);
     }
 
 
-    function updateProgress(data, intervalId) {
+    function updateProgress(data, endStepId, intervalId) {
         let allCompleted = true;
         Object.entries(data).forEach(([taskKey, taskData]) => {
             const node = document.getElementById(taskKey);
@@ -480,7 +541,7 @@
                     clearInterval(intervalId);
                     break;
                 case 3: // FINISHED
-                    if (node.id === endStepName) {
+                    if (node.id === endStepId) {
                         // 最后一个任务完成，停止定时查询
                         clearInterval(intervalId);
                         triggerConfetti();
@@ -515,7 +576,6 @@
             confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
             document.body.appendChild(confetti);
 
-            // Remove confetti after animation
             confetti.addEventListener('animationend', () => {
                 confetti.remove();
             });
