--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -157,6 +157,16 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- spring security5 oauth2 资源服务器相关依赖 -->
         <dependency>
