--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-token/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-token/pom.xml
@@ -41,6 +41,14 @@
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.nimbusds</groupId>
