dev 1.1.1 fix: batch-activity 示例页面需手动调整Enum名称 feat: batch-activity.queryProgress 处理进度检查 feat: batch 导入导出字符集未配置时使用全局默认编码 feat: 为 en_US 设置默认 UTF-8 feat: batch 支持查询单挑处理详情

--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/shoulder/pages/activityPage.html.config
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/shoulder/pages/activityPage.html.config
@@ -365,7 +365,7 @@
     // 触发mock
     async function mockProgress() {
         try {
-            const response = await fetch(`SHOULDER_PAGE_HOST##BATCH_ACTIVITY_API_PATH##/testProgress?progressId=_shoulderMockAndTest&activityId=MyTaskEnum`, {
+            const response = await fetch(`SHOULDER_PAGE_HOST##BATCH_ACTIVITY_API_PATH##/testProgress?progressId=_shoulderMockAndTest&activityId=${activityId}`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
