--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-build</artifactId>
-        <version>1.1.0</version><!-- shoulder-version -->
+        <version>1.1.1-SNAPSHOT</version><!-- shoulder-version -->
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>shoulder-base</artifactId>
-    <version>1.1.0</version><!-- shoulder-version -->
+    <version>1.1.1-SNAPSHOT</version><!-- shoulder-version -->
     <packaging>pom</packaging>
 
     <modules>
@@ -30,8 +30,8 @@
         <module>shoulder-security</module>
         <module>shoulder-security-code</module>
 
-        <module>shoulder-cluster</module>
         <module>shoulder-batch</module>
+        <module>shoulder-cluster</module>
 
         <!--        <module>shoulder-api-doc</module> temp_removal_for_not_support_spring_boot_3-->
         <module>shoulder-monitor</module>
