--- a/shoulder-build/pom.xml
+++ b/shoulder-build/pom.xml
@@ -11,6 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <name>${project.artifactId}</name>
     <artifactId>shoulder-build</artifactId>
 
     <!--
