--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -10,6 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <name>${project.artifactId}</name>
     <artifactId>shoulder-starters</artifactId>
     <packaging>pom</packaging>
 
