--- a/shoulder-build/shoulder-starters/shoulder-starter-crypto/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-crypto/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.artifactId}</name>
     <artifactId>shoulder-starter-crypto</artifactId>
     <description>
         只引入加解密相关依赖
