--- a/shoulder-build/shoulder-starters/shoulder-starter-security-code/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-security-code/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.artifactId}</name>
     <artifactId>shoulder-starter-security-code</artifactId>
 
     <dependencies>
