--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
   - name: 编译、打包、发布到 maven 仓库
     image: cnlym/maven:3-jdk-21-alpine-aliyun
     # 加速，对于这种稳定的容器
-    pull: if-not-exists
+    #pull: if-not-exists
     volumes:
       - name: mvnCache
         path: /root/.m2
