--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
         path: /root/.m2
     commands:
       # 异步快速检查依赖
-      - cp /usr/share/maven/ref/settings-docker.xml ~/m2/settings.xml
+      - cp /usr/share/maven/ref/settings-docker.xml ~/.m2/settings.xml
       - curl --location --request POST 'http://autopom.itlym.cn:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true' --form 'notifyReason=CI-<a href="https://git.itlym.cn/gogs/${DRONE_REPO_NAME}">${DRONE_REPO_NAME}::${DRONE_REPO_BRANCH}</a><br> with <a href="https://drone.itlym.cn/gogs/${DRONE_REPO_NAME}/${DRONE_BUILD_NUMBER}">Drone Build-${DRONE_BUILD_NUMBER}</a><br>' || echo '======= SKIP dependency check. ======='
       #
       - export MAVEN_OPTS="-Xmx400m -Xms400m"
